--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Server</title>
-</head>
-<body>
-<div id="root"></div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"><title>Share Parking Pass</title><link rel="shortcut icon" href="./favicon.ico"><link href="./static/css/main.07fef430.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="./static/js/main.a05775d3.js"></script></body></html>
